:focus pseudo class fails to repaint on a shadow host when focus moves from outside the page inside a shadow tree https://bugs.webkit.org/show_bug.cgi?id=205531

Reviewed by Simon Fraser, Darin Adler and Wenson Hsieh.

The bug was caused by FrameSelection::focusedOrActiveStateChanged only invalidating the style of the focused element.
Invalidate each outer shadow host when the focus status changes to fix the bug.

* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::focusedOrActiveStateChanged): Fixed the bug.
* Tools/WebKitTestRunner/cocoa/UIScriptControllerCocoa.h:
* Tools/WebKitTestRunner/cocoa/UIScriptControllerCocoa.mm:
(WTR::UIScriptControllerCocoa::becomeFirstResponder): Moved to UIScriptControllerIOS.
(WTR::UIScriptControllerCocoa::resignFirstResponder): Ditto.
* Tools/WebKitTestRunner/ios/UIScriptControllerIOS.h:
* Tools/WebKitTestRunner/ios/UIScriptControllerIOS.mm:
(WTR::UIScriptControllerIOS::becomeFirstResponder): Moved from UIScriptControllerCocoa.
(WTR::UIScriptControllerIOS::resignFirstResponder): Ditto.
* Tools/WebKitTestRunner/mac/UIScriptControllerMac.h:
* Tools/WebKitTestRunner/mac/UIScriptControllerMac.mm:
(WTR::UIScriptControllerMac::becomeFirstResponder): Added.
(WTR::UIScriptControllerMac::resignFirstResponder): Added.

* LayoutTests/fast/shadow-dom/focus-ring-on-shadow-host-expected.html: Added.
* LayoutTests/fast/shadow-dom/focus-ring-on-shadow-host.html: Added.
* LayoutTests/resources/ui-helper.js:
(window.UIHelper.resignFirstResponder): Added the support for WebKit1.
(window.UIHelper.becomeFirstResponder): Ditto.
* LayoutTests/platform/gtk/TestExpectations: Skip the test as resignFirstResponder is not implemented on GTK+.
* LayoutTests/platform/win/TestExpectations: Ditto on Windows.

Canonical link: https://commits.webkit.org/252261@main