Tools/WebKitTestRunner/cocoa/UIScriptControllerCocoa.h
@@ -42,8 +42,6 @@ private:
     void setViewScale(double) override;
     void setMinimumEffectiveWidth(double) override;
     void setWebViewEditable(bool) override;
-    void becomeFirstResponder() override;
-    void resignFirstResponder() override;
     void removeViewFromWindow(JSValueRef) override;
     void addViewToWindow(JSValueRef) override;
     void overridePreference(JSStringRef, JSStringRef) override;
