Tools/WebKitTestRunner/ios/UIScriptControllerIOS.h
@@ -176,6 +176,8 @@ private:
     JSObjectRef toObject(CGRect) const;
 
     bool isWebContentFirstResponder() const override;
+    void becomeFirstResponder() override;
+    void resignFirstResponder() override;
 
     void simulateRotation(DeviceOrientation, JSValueRef callback);
 };
